@@ -1398,6 +1398,9 @@ void limit_string(char *name)
 {
 	int	i;
 
+	if (!name)
+		return;
+
 	if (strlen(name) < NAME_LENGTH_LIMIT)
 		return;
 
